Change text colour to white, fix flex alignment

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,5 @@
 :root {
+  --white: hsl(0, 0%, 100%);
   --transparent-white: hsla(0, 0%, 100%, 0.75);
   --grey: hsl(0, 0%, 95%);
   --orange: hsl(31, 77%, 52%);
@@ -27,8 +28,6 @@ body {
   font-family: 'Lexend Deca', sans-serif;
   height: 100vh;
   width: 100%;
-  display: flex;
-  flex-direction: column;
   font-weight: 400;
 }
 
@@ -52,10 +51,27 @@ ul {
   list-style: none;
 }
 
+h1,
+p {
+  color: var(--white);
+}
+
+p {
+  line-height: 1.67;
+}
+
+main {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  height: 100%;
+}
+
 .cards {
   width: 85%;
   max-width: 1000px;
   display: flex;
+  flex-direction: column;
 }
 
 .card {
@@ -75,4 +91,7 @@ h1 {
   font-family: 'Big Shoulders Display', sans-serif;
   font-size: 2.5em;
   font-weight: 700;
+}
+
+button {
 }
